Fixing alignments

--- a/src/shared/helpers.css
+++ b/src/shared/helpers.css
@@ -16,7 +16,6 @@ body {
   position: relative;
   vertical-align: middle;
   color: var(--color-2);
-  margin: 0 auto;
 }
 
 * > * {
@@ -255,19 +254,16 @@ label {
 .middle-align {
   display: flex !important;
   align-items: center;
-  justify-content: flex-start;
 }
 
 .bottom-align {
   display: flex !important;
   align-items: flex-end;
-  justify-content: flex-start;
 }
 
 .top-align {
   display: flex !important;
   align-items: flex-start;
-  justify-content: flex-start;
 }
 
 .left-align {
